--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -563,7 +563,7 @@
     "5. There are a lot of areas to spend our time money and energy on to reduce overall death and furthermore to improve the quality and quantity of life for the majority of Americans long term.\n",
     "\n",
     "## Modeling\n",
-    "With more time a forecasting will be done on all relevant causes of death.\n",
+    "With more time a forecast will be done on all relevant causes of death.\n",
     "\n",
     "# Conclusion\n",
     "Covid kills, and that is absolutely horrible. But other things kill as well and have been for a long time and will continue to do so. Fortunately the covid deaths are concentrated in the ages closer to end of life.\n",
